estructure home.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sapataria do Arnaldo</title>
+</head>
+<body>
+    <nav>
+      <ul>
+        <li><a href="#">Home</li></a>
+        <li><a href="#">Contato</li></a>
+        <li><a href="#">Sobre nos</li></a>
+      </ul>
+    </nav>
+    <main>
+      <header>
+        <div class="containerText">
+          <h1>Bem Vindo</h1>
+          <h2>a sapataria do Arnaldo</h2>
+          <p>Aqui você encontra qualidade e velocidade de entrega, temos uma grande variedade de sapatos, bolsas, mochilas e cintos</p>
+        </div>
+      </header>
+      <section>
+        <div class="containerFilosofia">
+          <div class="contentFilosofia">
+            <p>Na Sapataria Arnaldo, oferecemos uma seleção de sapatos de alta qualidade, duráveis, confortáveis e elegantes. Nosso compromisso com a satisfação do cliente é uma prioridade, e estamos empenhados em garantir uma experiência de compra tranquila e sem complicações. Também somos comprometidos com práticas comerciais éticas e sustentáveis, e estamos sempre em busca de novas maneiras de melhorar e aprimorar nossa seleção de sapatos. Venha nos visitar para encontrar o sapato perfeito para qualquer ocasião.</p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="containerCard">
+          <div class="contentCard">
+            <div class="card card1">
+              <img src="./assets/card/" alt="Card 1">
+              <h1>Sapato</h1>
+            </div>
+            <div class="card card2">
+              <img src="./assets/card/" alt="Card 2">
+              <h1>Bolsa</h1>
+            </div>
+            <div class="card card3">
+              <img src="./assets/card/" alt="Card 3">
+              <h1>Mochila</h1>
+            </div>
+            <div class="card card4">
+              <img src="./assets/card/" alt="Card 4">
+              <h1>Cintos</h1>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="pgto"></div>
+      <div class="social"></div>
+      <div class="copyright"></div>
+    </footer>
+</body>
+</html>
