--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
+
   <title>Sapataria do Arnaldo</title>
 </head>
 <body>
     <nav>
-      <ul>
+      <ul class="navTitulos">
         <li><a href="#">Home</li></a>
         <li><a href="#">Contato</li></a>
         <li><a href="#">Sobre nos</li></a>
