update: add endereço

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
       </section>
     </main>
     <footer>
+      <div class="endereco">
+        <p>R. Forte do Lene, 52</p>
+        <p>Santa Adélia</p>
+        <p>São Paulo - SP</p>
+        <p>(11) 3371-1279</p>
+      </div>
       <div class="pgto"></div>
       <div class="social"></div>
       <div class="copyright"></div>
