update: modified index to andress Sapataria

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <title>Sapataria do Arnaldo</title>
 </head>
 <body>
-    <nav>
+    <h1>Sapataria do Arnaldo</h1>  
+
+    <address class="endereco">
+      <p>R. Forte do Lene, 52</p>
+      <p>Jd. Santa Adélia</p>
+      <p>São Paulo - SP</p>
+      <p>(11) 3371-1279</p>
+    </address>
+    <!-- <nav>
       <ul class="navTitulos">
         <li><a href="#">Home</li></a>
         <li><a href="#">Contato</li></a>
@@ -57,13 +65,13 @@
     <footer>
       <div class="endereco">
         <p>R. Forte do Lene, 52</p>
-        <p>Santa Adélia</p>
+        <p>Jd. Santa Adélia</p>
         <p>São Paulo - SP</p>
         <p>(11) 3371-1279</p>
       </div>
       <div class="pgto"></div>
       <div class="social"></div>
       <div class="copyright"></div>
-    </footer>
+    </footer> -->
 </body>
 </html>
