--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>São Paulo - SP</p>
       <p>(11) 3371-1279</p>
     </address>
-    <!-- <nav>
+    <nav>
       <ul class="navTitulos">
         <li><a href="#">Home</li></a>
         <li><a href="#">Contato</li></a>
@@ -72,6 +72,6 @@
       <div class="pgto"></div>
       <div class="social"></div>
       <div class="copyright"></div>
-    </footer> -->
+    </footer> 
 </body>
 </html>
