--- a/index.html
+++ b/index.html
@@ -9,14 +9,6 @@
   <title>Sapataria do Arnaldo</title>
 </head>
 <body>
-    <h1>Sapataria do Arnaldo</h1>  
-
-    <address class="endereco">
-      <p>R. Forte do Lene, 52</p>
-      <p>Jd. Santa Adélia</p>
-      <p>São Paulo - SP</p>
-      <p>(11) 3371-1279</p>
-    </address>
     <nav>
       <ul class="navTitulos">
         <li><a href="#">Home</li></a>
@@ -63,12 +55,12 @@
       </section>
     </main>
     <footer>
-      <div class="endereco">
+      <andress class="endereco">
         <p>R. Forte do Lene, 52</p>
         <p>Jd. Santa Adélia</p>
         <p>São Paulo - SP</p>
         <p>(11) 3371-1279</p>
-      </div>
+      </andress>
       <div class="pgto"></div>
       <div class="social"></div>
       <div class="copyright"></div>
