update: add navbar

--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
         <li><a href="#">Sobre nos</li></a>
       </ul>
     </nav>
+
+    <!-- <div class="containerBackground">
+      <img src="./assets/imgs/background.jpg " alt="background" class="background">
+    </div> -->
+
+    <header>
+      <div class="containerText">
+        <h1>Bem Vindo</h1>
+        <h2>a sapataria do Arnaldo</h2>
+        <p>Aqui você encontra qualidade e velocidade de entrega, temos uma grande variedade de sapatos, bolsas, mochilas e cintos</p>
+      </div>
+    </header>
     <main>
-      <header>
-        <div class="containerText">
-          <h1>Bem Vindo</h1>
-          <h2>a sapataria do Arnaldo</h2>
-          <p>Aqui você encontra qualidade e velocidade de entrega, temos uma grande variedade de sapatos, bolsas, mochilas e cintos</p>
-        </div>
-      </header>
       <section>
         <div class="containerFilosofia">
           <div class="contentFilosofia">
