alteração do head: texto

--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
       </ul>
     </nav>
 
-    <!-- <div class="containerBackground">
-      <img src="./assets/imgs/background.jpg " alt="background" class="background">
-    </div> -->
 
-    <header>
-      <div class="containerText">
-        <h1>Bem Vindo</h1>
-        <h2>a sapataria do Arnaldo</h2>
-        <p>Aqui você encontra qualidade e velocidade de entrega, temos uma grande variedade de sapatos, bolsas, mochilas e cintos</p>
+
+    <header class="containerHeader">
+      <div class="containerHeaderText">
+        <div class="contentHeaderText">
+          <h1>Bem Vindo</h1>
+          <h2>a sapataria do Arnaldo</h2>
+          <p>Aqui você encontra qualidade e velocidade de entrega, temos uma grande variedade de sapatos, bolsas, mochilas e cintos</p>
+        </div>
+      </div>
+      <div class="containerHeaderImg">
+        <!-- <img src="./assets/imgs/background.jpg " alt="background" class="background"> -->
       </div>
     </header>
     <main>
