update: estilized header css in text, img

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
       <div class="containerHeaderText">
         <div class="contentHeaderText">
           <h1>Bem Vindo</h1>
-          <h2>a sapataria do Arnaldo</h2>
-          <p>Aqui você encontra qualidade e velocidade de entrega, temos uma grande variedade de sapatos, bolsas, mochilas e cintos</p>
+          <h2>a sapataria do Arnaldo,</h2>
+          <p>Aqui você encontra qualidade e velocidade de entrega, temos uma grande variedade de sapatos, bolsas, mochilas e cintos.</p>
+        </div>
+        <div class="containerButtom">
+          <a href="produtos"><buttom>Veja nossos produtos</buttom></a>
         </div>
       </div>
       <div class="containerHeaderImg">
@@ -41,7 +44,7 @@
         </div>
       </section>
       <section>
-        <div class="containerCard">
+        <div class="containerCard" name="produto" >
           <div class="contentCard">
             <div class="card card1">
               <img src="./assets/card/" alt="Card 1">
