--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p>Aqui você encontra qualidade e velocidade de entrega, temos uma grande variedade de sapatos, bolsas, mochilas e cintos.</p>
         </div>
         <div class="containerButtom">
-          <a href="produtos"><buttom>Veja nossos produtos</buttom></a>
+          <a href="#produto"><buttom>Veja nossos produtos</buttom></a>
         </div>
       </div>
       <div class="containerHeaderImg">
@@ -36,35 +36,35 @@
       </div>
     </header>
     <main>
-      <section>
-        <div class="containerFilosofia">
-          <div class="contentFilosofia">
-            <p>Na Sapataria Arnaldo, oferecemos uma seleção de sapatos de alta qualidade, duráveis, confortáveis e elegantes. Nosso compromisso com a satisfação do cliente é uma prioridade, e estamos empenhados em garantir uma experiência de compra tranquila e sem complicações. Também somos comprometidos com práticas comerciais éticas e sustentáveis, e estamos sempre em busca de novas maneiras de melhorar e aprimorar nossa seleção de sapatos. Venha nos visitar para encontrar o sapato perfeito para qualquer ocasião.</p>
+      <div class="containerSections">
+        <section class="secFilosofia">
+          <div class="containerFilosofia">
+              <p>Na Sapataria Arnaldo, oferecemos uma seleção de sapatos de alta qualidade, duráveis, confortáveis e elegantes. Nosso compromisso com a satisfação do cliente é uma prioridade, e estamos empenhados em garantir uma experiência de compra tranquila e sem complicações. Também somos comprometidos com práticas comerciais éticas e sustentáveis, e estamos sempre em busca de novas maneiras de melhorar e aprimorar nossa seleção de sapatos. Venha nos visitar para encontrar o sapato perfeito para qualquer ocasião.</p>
           </div>
-        </div>
-      </section>
-      <section>
-        <div class="containerCard" name="produto" >
-          <div class="contentCard">
-            <div class="card card1">
-              <img src="./assets/card/" alt="Card 1">
-              <h1>Sapato</h1>
-            </div>
-            <div class="card card2">
-              <img src="./assets/card/" alt="Card 2">
-              <h1>Bolsa</h1>
-            </div>
-            <div class="card card3">
-              <img src="./assets/card/" alt="Card 3">
-              <h1>Mochila</h1>
-            </div>
-            <div class="card card4">
-              <img src="./assets/card/" alt="Card 4">
-              <h1>Cintos</h1>
+        </section>
+        <section class="secProduto">
+          <div class="containerCard" id="produto" >
+            <div class="contentCard">
+              <div class="card card1">
+                <img src="./assets/card/" alt="Card 1">  <!-- object fit, position etc no css -->
+                <h1>Sapato</h1>
+              </div>
+              <div class="card card2">
+                <img src="./assets/card/" alt="Card 2">
+                <h1>Bolsa</h1>
+              </div>
+              <div class="card card3">
+                <img src="./assets/card/" alt="Card 3">
+                <h1>Mochila</h1>
+              </div>
+              <div class="card card4">
+                <img src="./assets/card/" alt="Card 4">
+                <h1>Cintos</h1>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
     <footer>
       <andress class="endereco">
