add: img sapateiro

--- a/index.html
+++ b/index.html
@@ -37,10 +37,15 @@
       <div class="containerSections">
         <section class="secFilosofia">
           <div class="containerFilosofia">
-              <p>Na Sapataria Arnaldo, oferecemos uma seleção de sapatos de alta qualidade, duráveis, confortáveis e elegantes. Nosso compromisso com a satisfação do cliente é uma prioridade, e estamos empenhados em garantir uma experiência de compra tranquila e sem complicações. Também somos comprometidos com práticas comerciais éticas e sustentáveis, e estamos sempre em busca de novas maneiras de melhorar e aprimorar nossa seleção de sapatos. Venha nos visitar para encontrar o sapato perfeito para qualquer ocasião.</p>
+            <div class="contentFotoSapateiro">
+              <img src="./assets/imgs/perfil-sapateiro.jpg" alt="Foto do Sapateiro" class="fotoSapateiro">
+            </div>
+              <div class="contentFilosofia">
+                <p>Na Sapataria Arnaldo, oferecemos uma seleção de sapatos de alta qualidade, duráveis, confortáveis e elegantes. Nosso compromisso com a satisfação do cliente é uma prioridade, e estamos empenhados em garantir uma experiência de compra tranquila e sem complicações. Também somos comprometidos com práticas comerciais éticas e sustentáveis, e estamos sempre em busca de novas maneiras de melhorar e aprimorar nossa seleção de sapatos. Venha nos visitar para encontrar o sapato perfeito para qualquer ocasião.</p>
+              </div>
           </div>
         </section>
-        <section class="secProduto">
+          <section class="secProduto">
           <div class="containerCard" id="produto" >
             <div class="contentCard">
               <div class="card card1">
