--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/index.css">
 
   <title>Sapataria do Arnaldo</title>
 </head>
@@ -49,19 +49,27 @@
           <div class="containerCard" id="produto" >
             <div class="contentCard">
               <div class="card card1">
-                <img src="./assets/card/" alt="Card 1">  <!-- object fit, position etc no css -->
-                <h1>Sapato</h1>
+                <div class="containerCardImg">
+                  <img src="./assets/card/sapato2.jpg" alt="Card 1">  <!-- object fit, position etc no css -->
+                </div>
+                <h1>Sapatos</h1>
               </div>
               <div class="card card2">
-                <img src="./assets/card/" alt="Card 2">
-                <h1>Bolsa</h1>
+                <div class="containerCardImg">
+                  <img src="./assets/card/bolsa.jpg" alt="Card 2">
+                </div>
+                <h1>Bolsas</h1>
               </div>
               <div class="card card3">
-                <img src="./assets/card/" alt="Card 3">
-                <h1>Mochila</h1>
+                <div class="containerCardImg">
+                  <img src="./assets/card/" alt="Card 3">
+                </div>
+                <h1>Mochilas</h1>
               </div>
               <div class="card card4">
-                <img src="./assets/card/" alt="Card 4">
+                <div class="containerCardImg">
+                  <img src="./assets/card/" alt="Card 4">
+                </div>
                 <h1>Cintos</h1>
               </div>
             </div>
