update: card style

--- a/index.html
+++ b/index.html
@@ -52,25 +52,37 @@
                 <div class="containerCardImg">
                   <img src="./assets/card/sapato2.jpg" alt="Card 1">  <!-- object fit, position etc no css -->
                 </div>
-                <h1>Sapatos</h1>
+                <div class="conteudoCard">
+                  <h1>Sapatos</h1>
+                  <button>Ver mais</button>
+                </div>
               </div>
               <div class="card card2">
                 <div class="containerCardImg">
                   <img src="./assets/card/bolsa.jpg" alt="Card 2">
                 </div>
-                <h1>Bolsas</h1>
+                <div class="conteudoCard">
+                  <h1>Bolsas</h1>
+                  <button>Ver mais</button>
+                </div>
               </div>
               <div class="card card3">
                 <div class="containerCardImg">
-                  <img src="./assets/card/" alt="Card 3">
+                  <img src="./assets/card/mochila.jpg" alt="Card 3">
                 </div>
-                <h1>Mochilas</h1>
+                <div class="conteudoCard">
+                  <h1>Mochilas</h1>
+                  <button>Ver mais</button>
+                </div>
               </div>
               <div class="card card4">
                 <div class="containerCardImg">
-                  <img src="./assets/card/" alt="Card 4">
+                  <img src="./assets/card/cinto.jpg" alt="Card 4">
                 </div>
-                <h1>Cintos</h1>
+                <div class="conteudoCard">
+                  <h1>Cintos</h1>
+                  <button>Ver mais</button>
+                </div>
               </div>
             </div>
           </div>
