--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Descubra a excelência em sapatos na Sapataria Arnaldo! Qualidade, conforto e estilo em uma ampla seleção de sapatos elegantes. Atendimento personalizado e satisfação garantida.">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/index.css">
 
@@ -35,16 +36,25 @@
     </header>
     <main>
       <div class="containerSections">
+
+
+
+        
         <section class="secFilosofia">
+
           <div class="contentFotoSapateiro">
             <img src="./assets/imgs/perfil-sapateiro.jpg" alt="Foto do Sapateiro" class="fotoSapateiro">
           </div>
-          <div class="breatherBar"></div>
+
           <div class="containerFilosofia">
             <p>Na Sapataria Arnaldo, oferecemos uma seleção de sapatos de alta qualidade, duráveis, confortáveis e elegantes. Nosso compromisso com a satisfação do cliente é uma prioridade, e estamos empenhados em garantir uma experiência de compra tranquila e sem complicações. Também somos comprometidos com práticas comerciais éticas e sustentáveis, e estamos sempre em busca de novas maneiras de melhorar e aprimorar nossa seleção de sapatos. Venha nos visitar para encontrar o sapato perfeito para qualquer ocasião.</p>
           </div>
+
         </section>
         
+
+
+
         <section class="secProduto">
           <div class="containerCard" id="produto" >
             <div class="contentCard">
@@ -91,15 +101,17 @@
     </main>
     <!--  -->
     <footer>
-      <andress class="endereco">
-        <p>R. Forte do Lene, 52</p>
-        <p>Jd. Santa Adélia</p>
-        <p>São Paulo - SP</p>
-        <p>(11) 3371-1279</p>
-      </andress>
-      <div class="pgto"></div>
-      <div class="social"></div>
-      <div class="copyright"></div>
+      <div class="containerFooter">
+        <andress class="endereco">
+          <p>R. Forte do Lene, 52</p>
+          <p>Jd. Santa Adélia</p>
+          <p>São Paulo - SP</p>
+          <p>(11) 3371-1279</p>
+        </andress>
+        <div class="pgto"></div>
+        <div class="social"></div>
+        <div class="copyright"></div>
+      </div>
     </footer> 
 </body>
 </html>
