css: social icon modified

--- a/index.html
+++ b/index.html
@@ -108,9 +108,17 @@
           <p>São Paulo - SP</p>
           <p>(11) 3371-1279</p>
         </andress>
-        <div class="pgto"></div>
-        <div class="social"></div>
-        <div class="copyright"></div>
+        <div class="containerSocialIcons">
+          <div class="pgto">
+            <img src="./assets/social/facebook.svg" alt="Icone do Facebook" class="socialIcon">
+          </div>
+          <div class="social">
+            <img src="./assets/social/instagram.svg" alt="Icone do Instagram" class="socialIcon">
+          </div>
+          <div class="copyright">
+            <img src="./assets/social/linkedIn.svg" alt="Icone do Linkedin" class="socialIcon">
+          </div>
+        </div>
       </div>
     </footer> 
 </body>
