finalized index and create about.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Descubra a excelência em sapatos na Sapataria Arnaldo! Qualidade, conforto e estilo em uma ampla seleção de sapatos elegantes. Atendimento personalizado e satisfação garantida.">
   <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/navbar.css">
   <link rel="stylesheet" href="./css/index.css">
 
   <title>Sapataria do Arnaldo</title>
@@ -15,7 +16,7 @@
       <ul class="navTitulos">
         <li><a href="#">Home</li></a>
         <li><a href="#">Contato</li></a>
-        <li><a href="#">Sobre nos</li></a>
+        <li><a href="./about.html">Sobre nós</li></a>
       </ul>
     </nav>
 
@@ -102,22 +103,27 @@
     <!--  -->
     <footer>
       <div class="containerFooter">
-        <andress class="endereco">
-          <p>R. Forte do Lene, 52</p>
-          <p>Jd. Santa Adélia</p>
-          <p>São Paulo - SP</p>
-          <p>(11) 3371-1279</p>
-        </andress>
-        <div class="containerSocialIcons">
-          <div class="pgto">
-            <img src="./assets/social/facebook.svg" alt="Icone do Facebook" class="socialIcon">
+        <div class="contentFooter">
+          <andress class="endereco">
+            <p>R. Forte do Lene, 52</p>
+            <p>Jd. Santa Adélia</p>
+            <p>São Paulo - SP</p>
+            <p>(11) 3371-1279</p>
+          </andress>
+          <div class="containerSocialIcons">
+            <div class="pgto">
+              <img src="./assets/social/facebook.svg" alt="Icone do Facebook" class="socialIcon">
+            </div>
+            <div class="social">
+              <img src="./assets/social/instagram.svg" alt="Icone do Instagram" class="socialIcon">
+            </div>
+            <div class="copyright">
+              <img src="./assets/social/linkedIn.svg" alt="Icone do Linkedin" class="socialIcon">
+            </div>
           </div>
-          <div class="social">
-            <img src="./assets/social/instagram.svg" alt="Icone do Instagram" class="socialIcon">
-          </div>
-          <div class="copyright">
-            <img src="./assets/social/linkedIn.svg" alt="Icone do Linkedin" class="socialIcon">
-          </div>
+        </div>
+        <div class="containerCopywriting">
+          <p>Copywriting by Enrick Santos</p>
         </div>
       </div>
     </footer> 
