--- a/about.html
+++ b/about.html
@@ -13,9 +13,13 @@
 <body>
     <nav>
         <ul class="navTitulos">
-          <li><a href="#">Home</li></a>
-          <li><a href="#">Contato</li></a>
+          <li><a href="./index.html">Home</li></a>
+          <li><a href="./catalog.html">Contato</li></a>
         </ul>
-      </nav>
+    </nav>
+
+    <main>
+        
+    </main>
 </body>
 </html>
