--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <ul class="navTitulos">
         <li><a href="#">Home</li></a>
-        <li><a href="#">Contato</li></a>
+        <li><a href="./contact.html">Contato</li></a>
         <li><a href="./about.html">Sobre nós</li></a>
       </ul>
     </nav>
@@ -38,9 +38,6 @@
     <main>
       <div class="containerSections">
 
-
-
-        
         <section class="secFilosofia">
 
           <div class="contentFotoSapateiro">
@@ -52,9 +49,6 @@
           </div>
 
         </section>
-        
-
-
 
         <section class="secProduto">
           <div class="containerCard" id="produto" >
@@ -65,7 +59,7 @@
                 </div>
                 <div class="conteudoCard">
                   <h1>Sapatos</h1>
-                  <button>Ver mais</button>
+                  <a href="./catalog.html"></a><button>Ver mais</button>
                 </div>
               </div>
               <div class="card card2">
