--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Descubra a excelência em sapatos na Sapataria Arnaldo! Qualidade, conforto e estilo em uma ampla seleção de sapatos elegantes. Atendimento personalizado e satisfação garantida.">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/navbar.css">
+  <link rel="stylesheet" href="./css/footer.css">
+  <link rel="stylesheet" href="./css/scroolbar.css">
   <link rel="stylesheet" href="./css/index.css">
 
   <title>Sapataria do Arnaldo</title>
