update: contact add img local sapataria

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </section>
       </div>
     </main>
-    <!--  -->
+    <!-- RODAPÉ -->
     <footer>
       <div class="containerFooter">
         <div class="contentFooter">
