update: contact css

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,14 @@
                 </form>
             </div>
 
-            
+            <aside>
+                <h3>Horário de funcionamento</h3>
+                <p>Seg. a Sex </p>
+                <p>das 08h ás 17h</p>
+                <p>Sabados </p>
+                <p>das 09h ás 12h</p>
+            </aside>
+
             <div class="containerImgLoja">
                 <img src="./assets/imgs/contact/loja.jpg" alt="imagem da loja">
             </div>
