--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             </div>
             
             <div class="contentForm">
-                <form action="">
+                <form action="" onsubmit="alert('Formulario Enviado')">
                     <div>
                         <label for="name">Nome</label>
                         <input type="text" id="name" required>
