--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         </section>
 
-        <section class="secProduto">
+        <section class="secProduto" name="produto" >
           <div class="containerCard" id="produto" >
             <div class="contentCard">
               <div class="card card1">
